aau/sf_autobackup/objects/Mobile_Links__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>We&apos;re only going to display the records marked Active in the Mobile Application</description>
        <inlineHelpText>We&apos;re only going to display the records marked Active in the Mobile Application</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>field to order links ni mobile app</description>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>External Url to connect to from the Mobile App</description>
        <inlineHelpText>External Url to connect to from the Mobile App</inlineHelpText>
        <label>Url</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mobile Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Url__c</columns>
        <columns>Active__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Mobile Links Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>